test/cases/compile_errors/unneeded_declaration_reference_from_invalid_import.zig
const Compilation = @import("This file must not exist.zig");
d: Compilation.Directory,

// error
// target=native
// backend=stage2
//
// This file must not exist.zig': FileNotFound
